--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,7 +2,7 @@
 import Logo from './Logo.astro'
 ---
 
-<nav class="flex items-center justify-between w-full sticky top-8 bg-black border-accent border rounded-3xl py-5 px-10">
+<nav class="flex items-center justify-between w-[calc(100%-2.5rem)] z-10 ml-[1.25rem] sticky top-8 bg-black border-accent border rounded-3xl py-5 px-10">
   <a class="uppercase font-mona text-secondary text-2xl tracking-wider hover:text-shadow-accent transition-all duration-400" href=".">Why this project</a>
   <div class="w-48">
     <Logo />
