--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 // types
-import { IAllCharacters } from '../types/characters';
+import { IAllCharacters } from '@localTypes/characters';
 // libs
 import getCharacters from "src/lib/characters";
 // components
