--- a/src/components/CharactersList.astro
+++ b/src/components/CharactersList.astro
@@ -14,8 +14,8 @@ const { title, items }: Props = Astro.props;
 { title ? <h2 class="font-mona text-7xl uppercase mt-16 mb-10">{title}</h2> : null }
 <div class="grid grid-cols-1 tablet:grid-cols-2 laptop:grid-cols-4 wide:grid-cols-5 gap-5">
   {
-  items.map(({name, image, status}: {name: string, image: string, status: string }) => {
-      return <Character id={2} type={name} name={name} image={image} status={status} species={name} gender={name} />
+  items.map(({name, image, status, id}: ICharacter) => {
+      return <Character id={id} type={name} name={name} image={image} status={status} species={name} gender={name} />
     })
   }
 </div>
