--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,8 @@
 ---
 import '../assets/styles/base.css';
 
+// components
+import Navbar from '@components/Navbar.astro';
 export interface Props {
 	title: string;
 }
@@ -19,6 +21,7 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
+    <Navbar />
 		<slot />
 	</body>
 </html>
