--- a/src/components/CharactersList.astro
+++ b/src/components/CharactersList.astro
@@ -6,7 +6,7 @@ interface Props {
   items: ICharacter[];
 }
 // components
-import Character from '@components/Character.astro';
+import CharacterCard from '@components/CharacterCard.astro';
 
 // code
 const { title, items }: Props = Astro.props;
@@ -14,8 +14,14 @@ const { title, items }: Props = Astro.props;
 { title ? <h2 class="font-mona text-7xl uppercase mt-16 mb-10">{title}</h2> : null }
 <div class="grid grid-cols-1 tablet:grid-cols-2 laptop:grid-cols-4 wide:grid-cols-5 gap-5">
   {
-  items.map(({name, image, status, id}: ICharacter) => {
-      return <Character id={id} type={name} name={name} image={image} status={status} species={name} gender={name} />
+  items.map(({name, image, status, id }: Omit<ICharacter, "species" | "type" | "gender">) => {
+      return
+        <CharacterCard
+          id={id}
+          name={name}
+          image={image}
+          status={status}
+        />
     })
   }
 </div>
