refactor: :recycle: centralized code for Character

--- a/src/components/CharacterCard.astro
+++ b/src/components/CharacterCard.astro
@@ -1,7 +1,7 @@
 ---
 // types
-import { ICharacter } from '@localTypes/characters';
-type ICharacterCard = Omit<ICharacter, "species" | "type" | "gender">;
+import { ICharacterCard } from '@localTypes/characters';
+
 
 interface Props extends ICharacterCard {}
 
