--- a/src/components/CharactersList.astro
+++ b/src/components/CharactersList.astro
@@ -1,6 +1,6 @@
 ---
 // types
-import { ICharacter } from '@localTypes/characters';
+import { ICharacter, ICharacterCard } from '@localTypes/characters';
 interface Props {
   title?: string;
   items: ICharacter[];
@@ -12,16 +12,15 @@ import CharacterCard from '@components/CharacterCard.astro';
 const { title, items }: Props = Astro.props;
 ---
 { title ? <h2 class="font-mona text-7xl uppercase mt-16 mb-10">{title}</h2> : null }
-<div class="grid grid-cols-1 tablet:grid-cols-2 laptop:grid-cols-4 wide:grid-cols-5 gap-5">
+<section class="grid grid-cols-1 tablet:grid-cols-2 laptop:grid-cols-4 wide:grid-cols-5 gap-5">
   {
-  items.map(({name, image, status, id }: Omit<ICharacter, "species" | "type" | "gender">) => {
-      return
-        <CharacterCard
-          id={id}
-          name={name}
-          image={image}
-          status={status}
-        />
-    })
+    items.map(({name, image, status, id }: ICharacterCard) => (
+      <CharacterCard
+        id={id}
+        name={name}
+        image={image}
+        status={status}
+      />
+    ))
   }
-</div>
+</section>
