--- a/src/pages/character/[id].astro
+++ b/src/pages/character/[id].astro
@@ -7,6 +7,7 @@ import getCharacters from "src/lib/characters";
 // components
 import Layout from '@layouts/Layout.astro';
 import Container from '@components/Container.astro';
+import CharacterDetail from '@components/CharacterDetail.astro';
 
 // code
 export async function getStaticPaths() {
@@ -20,13 +21,26 @@ export async function getStaticPaths() {
 }
 
 
-const { id }: ICharacter = Astro.props;
+const { id, name, status, species, type, gender, origin, location, image, episode }: ICharacter = Astro.props;
 ---
 
 <Layout title="Astro Rick And Morty">
 	<main class="pt-6 pb-28">
     <Container>
-      <h1 class="text-4xl font-bold text-center">Character: {id}</h1>
+      <section class="pt-12">
+        <CharacterDetail
+          id={id}
+          name={name}
+          status={status}
+          species={species}
+          type={type}
+          gender={gender}
+          origin={origin}
+          location={location}
+          image={image}
+          episode={episode}
+        />
+      </section>
     </Container>
 	</main>
 </Layout>
