--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import '../assets/styles/base.css';
+import 'src/assets/styles/base.css';
 
 // components
 import Navbar from '@components/Navbar.astro';
