--- a/src/components/CharactersList.astro
+++ b/src/components/CharactersList.astro
@@ -11,7 +11,7 @@ import CharacterCard from '@components/CharacterCard.astro';
 // code
 const { title, items }: Props = Astro.props;
 ---
-{ title ? <h2 class="font-mona text-7xl uppercase mt-16 mb-10">{title}</h2> : null }
+{ title ? <h2 class="font-mona text-5xl tablet:text-7xl uppercase mt-16 mb-10">{title}</h2> : null }
 <section class="grid grid-cols-1 tablet:grid-cols-2 laptop:grid-cols-4 wide:grid-cols-5 gap-5">
   {
     items.map(({name, image, status, id }: ICharacterCard) => (
