--- a/src/pages/character/[id].astro
+++ b/src/pages/character/[id].astro
@@ -20,26 +20,46 @@ export async function getStaticPaths() {
   }));
 }
 
-
-const { id, name, status, species, type, gender, origin, location, image, episode }: ICharacter = Astro.props;
+const {
+  id,
+  name,
+  status,
+  species,
+  type,
+  gender,
+  origin,
+  location,
+  image,
+  episode
+}: ICharacter = Astro.props;
 ---
 
 <Layout title="Astro Rick And Morty">
 	<main class="pt-6 pb-28">
     <Container>
       <section class="pt-12">
-        <CharacterDetail
-          id={id}
-          name={name}
-          status={status}
-          species={species}
-          type={type}
-          gender={gender}
-          origin={origin}
-          location={location}
-          image={image}
-          episode={episode}
-        />
+        <div class="grid grid-cols-1 gap-2 desktop:grid-cols-12 desktop:gap-8">
+          <div class="desktop:col-span-9">
+            <CharacterDetail
+              id={id}
+              name={name}
+              status={status}
+              species={species}
+              type={type}
+              gender={gender}
+              origin={origin}
+              location={location}
+              image={image}
+              episode={episode}
+            />
+          </div>
+          <div class="desktop:col-span-3">
+            <div class="grid grid-cols-1 gap-1 tablet:grid-cols-2 tablet:gap-2 desktop:grid-cols-1">
+              <div>ELEMENT 1</div>
+              <div>ELEMENT 2</div>
+            </div>
+          </div>
+        </div>
       </section>
     </Container>
 	</main>
