--- a/src/components/CharacterCard.astro
+++ b/src/components/CharacterCard.astro
@@ -16,7 +16,7 @@ const statusClasses = {
 }
 ---
 
-<a href={`/character/${id}`} target="_self" rel="canonical" class="block p-4 border-accent border rounded-md">
+<a href={`/character/${id}`} target="_self" rel="canonical" class="block p-4 border rounded-md border-accent">
   <Img
     src={image}
     alt={name}
@@ -25,9 +25,9 @@ const statusClasses = {
     placeholder="blurred"
     loading="lazy"
   />
-  <p class="font-mona text-2xl uppercase mt-3 truncate">{name}</p>
+  <p class="mt-3 text-2xl uppercase truncate font-mona">{name}</p>
   <div class="flex items-center">
     <span class={`relative block rounded-full w-4 h-4 border-4 ${statusClasses[status.toLowerCase()]}`}></span>
-    <span class="text-xs block ml-1">{status}</span>
+    <span class="block ml-1 text-xs">{status}</span>
   </div>
 </a>
