--- a/src/components/CharacterStatus.astro
+++ b/src/components/CharacterStatus.astro
@@ -16,5 +16,5 @@ const statusClasses = {
 
 <div class="flex items-center">
   <span class={`relative block rounded-full w-4 h-4 border-4 ${statusClasses[status.toLowerCase()]}`}></span>
-  <span class="text-xs block ml-1">{status}</span>
+  <span class="block ml-1 text-xs">{status}</span>
 </div>
