feat: responsive stuff

--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -1,6 +1,6 @@
 <div class="fixed inset-0 flex-col items-center justify-center hidden w-full h-full p-12 bg-black tablet:p-0 tablet:flex tablet:justify-between tablet:flex-row tablet:relative tablet:inset-auto tablet:h-auto tablet:w-auto tablet:bg-transparent" id="menu" >
-  <a class="text-base tracking-wider uppercase transition-all font-mona text-secondary laptop:text-2xl hover:text-shadow-accent duration-400" href=".">Read the article</a>
-  <a class="text-base tracking-wider uppercase transition-all font-mona text-secondary laptop:text-2xl hover:text-shadow-accent duration-400" href=".">About Me</a>
+  <a class="text-2xl tracking-wider uppercase transition-all tablet:text-base font-mona text-secondary laptop:text-2xl hover:text-shadow-accent duration-400" href=".">Read the article</a>
+  <a class="mt-4 text-2xl tracking-wider uppercase transition-all tablet:mt-0 tablet:text-base font-mona text-secondary laptop:text-2xl hover:text-shadow-accent duration-400" href=".">About Me</a>
 </div>
 <button data-collapse-toggle="menu" type="button" class="z-10 inline-flex items-center text-xm text-secondary tablet:hidden" aria-controls="mega-menu" aria-expanded="false">
     <span class="sr-only">Open main menu</span>
