feat: :tada: added react component

--- a/src/components/CharacterPrevNext.astro
+++ b/src/components/CharacterPrevNext.astro
@@ -6,7 +6,7 @@ interface Props {
   id: ICharacter["id"];
 }
 // libs
-import getCharacters from "src/lib/characters";
+import { getCharacters } from "src/lib/characters";
 // components
 import CharacterCard from './CharacterCard.astro';
 
