--- a/src/pages/character/[id].astro
+++ b/src/pages/character/[id].astro
@@ -4,7 +4,7 @@ import { IAllCharacters, ICharacter } from '@localTypes/characters';
 interface Props extends ICharacter {}
 
 // libs
-import getCharacters from "src/lib/characters";
+import { getCharacters } from "src/lib/characters";
 
 // components
 import Layout from '@layouts/Layout.astro';
