feat: :mag: accessibility stuff

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -22,7 +22,7 @@ import Menu from '@components/Menu.astro'
       </defs>
     </svg>
     <div class="w-28 tablet:w-32 laptop:w-48">
-      <a href="/" rel="nofollow" target="_self">
+      <a href="/" aria-label="logo" target="_self">
         <Logo />
       </a>
     </div>
