refactor: :mag: SEO and better import for components

--- a/src/components/CharacterDetail.astro
+++ b/src/components/CharacterDetail.astro
@@ -9,7 +9,7 @@ type TDetails = {
 
 // components
 import { Img } from "astro-imagetools/components";
-import CharacterStatus from './CharacterStatus.astro';
+import CharacterStatus from '@components/CharacterStatus.astro';
 
 // code
 const {
