--- a/src/components/CharacterPrevNext.astro
+++ b/src/components/CharacterPrevNext.astro
@@ -8,7 +8,7 @@ interface Props {
 // libs
 import { getCharacters } from "src/lib/characters";
 // components
-import CharacterCard from './CharacterCard.astro';
+import CharacterCard from '@components/CharacterCard.astro';
 
 // code
 const { id } = Astro.props;
