--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import 'src/assets/styles/base.css';
 
 // components
 import Navbar from '@components/Navbar.astro';
+import Footer from '@components/Footer.astro';
 export interface Props {
 	title: string;
 }
@@ -18,10 +19,13 @@ const { title } = Astro.props;
     <meta name="description" content="Rick and Morty RestAPI Astro Website" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+    <meta name="keywords" content="Mirko Saugo, Rick and Morty, Astrojs">
+    <meta name="author" content="Mirko Saugo">
 		<title>{title}</title>
 	</head>
 	<body>
     <Navbar />
 		<slot />
+    <Footer />
 	</body>
 </html>
